# SimpleChat

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
simplechat/: main.py
simplechat/static/: styles.css
simplechat/templates/: base.j2  form.j2  index.j2  message.j2
